# BundleAdjustment

./: .gitignore  Dockerfile  README.md
ba_project/: CMakeLists.txt  CMakeLists_Docker.txt  CMakeLists_Windows.txt
ba_project/cmake/: googletest.cmake
ba_project/src/: main.cpp
ba_project/src/ba/: BundleAdjustment.cpp  BundleAdjustment.h  FeatureProcessor.cpp  FeatureProcessor.h  Initializer.cpp  Initializer.h  Optimizer.cpp  Optimizer.h  SfMHelper.cpp  SfMHelper.h
ba_project/src/data/: FreeImageHelper.cpp  FreeImageHelper.h  VirtualSensor.h
ba_project/src/metrics/: ReconstructionError.cpp  ReconstructionError.h  associate.py  evaluate_ate_scale.py
ba_project/src/model/: Frame.cpp  Frame.h  MapPoint.cpp  MapPoint.h  PointCloud.h  SceneMap.cpp  SceneMap.h
ba_project/src/utils/: Eigen.h
ba_project/src/visualization/: SimpleMesh.cpp  SimpleMesh.h  Visualizer.cpp  Visualizer.h
ba_project/tests/: ReconstructionError_test.cc  main.cc
